<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/LayoutStandardSlideUp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/close_register"
            style="@style/FABMain"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_gravity="right"
            android:contentDescription="Close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/create_account"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_add_a_photo_24"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/username"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/register_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/email_address"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/register_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_email"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/password_label"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/register_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:layout_marginTop="40dp"
            android:id="@+id/register_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textSize="18sp"/>
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>